@@ -1,3 +1,8 @@
+2010-01-27  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.base/break-interp.exp: Use [file tail $filename] to omit any
+	absolute directory pathnames in gdb.sum file.
+
 2010-01-27  Sami Wagiaalla  <swagiaal@redhat.com>
 
 	* gdb.cp/namespace-using.exp: Rename to nsusing.exp.
